# jira-nvim

./: .gitignore  Cargo.toml  Makefile  README.md
lua/jira-nvim/: config.lua  init.lua
lua/jira-nvim/buffers/: base_buffer.lua  init.lua  issue_buffer.lua  preview_buffer.lua  writer.lua
lua/jira-nvim/pickers/: actions.lua  finders.lua  init.lua  mappings.lua  previewers.lua
lua/telescope/_extensions/: jira-nvim.lua
plugin/: jira-nvim.vim
src/: config.rs  error.rs  formatters.rs  lib.rs  lua_models.rs  nvim.rs  utils.rs
src/jira/: client.rs  error.rs  mod.rs  models.rs  transport.rs
